# bookstore

./: Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py
order/migrations/: 0001_initial.py  0002_rename_products_order_product.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_model.py  test_order_serializer.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
